<resources>
    <string name="app_name">Bank Fake</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="forgout_password"><U>Forgout Password?</U></string>
    <string name="new_to_bank_app">New to Bank App?</string>
    <string name="sign_up"><U>Sign Up</U></string>
    <string name="connect_to_your_bank_account">Connect to your bank account</string>
    <string name="your_name">Your name</string>
    <string name="bank_account">Bank account</string>
    <string name="e_mail">E-mail</string>
    <string name="use_6_characteres_with_a_mix_of_letters_numbers_and_symbols">Use 6 characteres with a mix of letters, numbers and symbols</string>
</resources>