<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#154375"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="50sp"
            android:fontFamily="@font/roboto_variable"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/banco" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDFDFD"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70sp"
            android:hint="@string/username_or_email"
            android:textAlignment="center"
            app:boxCornerRadiusBottomEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusTopStart="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:hint="@string/password"
            android:textAlignment="center"
            app:boxCornerRadiusBottomEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusTopStart="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:text="@string/login"
            app:backgroundTint="#095284"
            app:cornerRadius="5sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50sp"
            android:fontFamily="@font/roboto_variable"
            android:text="@string/forgout_password"
            android:textAllCaps="false"
            android:textColor="#00BCD4"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:fontFamily="@font/roboto_variable"
                android:text="@string/new_to_bank_app"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:fontFamily="@font/roboto_variable"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#57D1E1"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>